# StyLit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  brush.cpp  brush.h  canvas2d.cpp  canvas2d.h  common.cpp  common.h  convolve.cpp  convolve.h  gaussianpyramid.cpp  gaussianpyramid.h  main.cpp  mainwindow.cpp  mainwindow.h  patchmatch.cpp  patchmatch.h  rgba.h  scale.cpp  scale.h  settings.cpp  settings.h  stylit.cpp  stylit.h  util.cpp  util.h
Configs/: armadillo.ini  beach.ini  bell_pepper.ini  bunny.ini  guy.ini  guy_512_comic.ini  guy_512_stipple.ini  guy_512_t.ini  guy_balance.ini  guy_paper.ini  pepper_512_comic.ini  pepper_512_stipple.ini  pepper_512_t.ini  sphere.ini  sphere2.ini  sphere_1000.ini  sphere_cropped.ini  sphere_olena.ini  sphere_paper.ini  sphere_pencil.ini  sphere_purple.ini  teapot.ini  test.ini  wave.ini
Data/: pepper_on_table.blend
Data/Armadillo/: armadillo.blend
Data/Blender_Files/: armadillo_on_table.blend  balance.blend  bunny_on_table.blend  guy_on_table.blend  guy_on_table_new.blend  pepper_on_table.blend  teapot_on_table.blend  wave.blend
Data/Guy/: guy_on_table.blend  guy_on_table.blend1
